# prosperity-imc-2025

./: .gitignore  .taplo.toml  After risk.py  README.md  merge.py  pyproject.toml  round2.py
dashboard/: dashapp.py
data/round1/: .~lock.merged.csv#
manual_round2/: Esempio2.py  Esempio4.py  averso.py
src/analysis/: basket-threshold-analysis.ipynb  basket-zscore-optimized.ipynb  data-exploratory-analysis.ipynb  round3-volsmile-dynamic.py  round3-volsmile-fixed.py  trades-book-iterations-analysis.ipynb
src/analysis/.ipynb_checkpoints/: data-exploratory-analysis-checkpoint.ipynb
src/opti/: backtester.ipynb  datamodel.py  round5-reader.ipynb  round5-trades-gridsearch.py  run_backtester-synthetic-baskets.ipynb  run_backtester.ipynb
src/subs/round1/: manual_max-matrix.py  round1.py
src/subs/round2/: backtester.py  round2.py  run_backtester.ipynb
src/subs/round3/: round3.py
src/subs/round4/: round4.py
src/subs/round5/: round5.py
src/subs/round_1/: ink-DY.py  ink-MM.py  ink.py  r1-final-kelp-resin-ink-v2.py  r1-final-kelp-resin-ink.py  r1.py  round1.py
src/subs/round_1/scratch/: r1.py
src/subs/round_2/: datamodel.py  r2-notouch.py  r2.py  r3.py  run_backtester.ipynb
strategies/round-1/: algo.py
