[project]
name = "prosperity-imc-2025"
version = "0.1.0"
description = ""
authors = [
  { name = "v3natio", email = "72844565+v3natio@users.noreply.github.com" },
  { name = "rrollpk", email = "fooid+fooname@users.noreply.github.com" },
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
  "numpy (>=2.2.4,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "matplotlib (>=3.10.1,<4.0.0)",
  "jsonpickle (>=4.0.5,<5.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "prosperity3bt (>=0.5.0,<0.6.0)",
  "jupyterlab (>=4.4.0,<5.0.0)",
  "prosperity3submit (>=0.1.0,<0.2.0)",
  "plotly (>=6.0.1,<7.0.0)",
  "pywavelets (>=1.8.0,<2.0.0)",
  "scipy (>=1.15.2,<2.0.0)",
  "statsmodels (>=0.14.4,<0.15.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
